--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -4,37 +4,39 @@
     <div>
 <h2>EDUCATION</h2>
 <p><b>Plum Senior High School (Pittsburgh, PA)</b></p>
-<p>High School Diploma (4.1 GPA)</p>
+<p>High School Diploma</p>
 <p>August 2012 - June 2016</p>
 <p><b>The Ohio State University (Columbus, OH)</b></p>
-<p>Bachelor of Science in Computer Science & Engineering (3.2 GPA)</p>
+<p>Bachelor of Science in Computer Science & Engineering</p>
 <p>August 2016 - May 2020</p>
 
 <h2>SKILL SET</h2>
-<p>Web Development: HTML, CSS, Angular, TypeScript, Node.js, jQuery, Protractor</p>
+<p>Web Development: HTML, CSS, Angular, TypeScript, Node.js, jQuery, Protractor (Selenium)</p>
 <p>Project Management/Version Control: Agile/Scrum, Git, JIRA</p>
 <p>Object-oriented: Java (intermediate level), C (beginner level)</p>
 
 <h2>PROJECTS</h2>
 <p><u>Spring 2017</u></p>
-<p><b>Snow & Ice Traffic Report Website</b> Changed Ohio Department of Transportation’s snow & ice traffic report site using jQuery, HTML, and CSS to better display data across site used at ODOT offices across the state.</p>
+<p><b>Snow & Ice Traffic Report Website:</b> Changed Ohio Department of Transportation’s snow & ice traffic report site using jQuery, HTML, and CSS to better display data across site used at ODOT offices across the state.</p>
 
 <p><u>Summer 2017</u></p>
-<p><b>E-commerce automated testing</b> Wrote automated tests against company’s e-commerce platform to test front-end and back-end test cases. Quality assurance testing was estimated at 16 hours manually before tests were written, were reduced to a script that took 15 minutes to run.</p>
+<p><b>E-commerce automated testing:</b> Wrote automated tests against company’s e-commerce platform to test front-end and back-end test cases. Quality assurance testing was estimated at 16 hours manually before tests were written and was reduced to a script that took 15 minutes to run.</p>
 
 <p><u>Summer 2018</u></p>
-<p><b>Quality Assurance Analyst></b>: Lead manual quality assurance on scooter rideshare app based in Pittsburgh area (scoobi.co) as well as on light fixture application for Swarovski Lighting.</p>
-<p><b>Front-End Developer</b> Worked on front-end aspects of scooter rideshare application using Angular.</p>
+<p><b>Quality Assurance Analyst</b>: Lead manual quality assurance on scooter rideshare app based in Pittsburgh area (scoobi.co) as well as on light fixture application for Swarovski Lighting.</p>
+<p><b>Front-End Developer:</b> Worked on front-end aspects of scooter rideshare application using Angular.</p>
 
 <h2>ACTIVITIES</h2>
 <p>•	Ohio State Hackathon (Hack OHI/O) participant</p>
 <p>November 2016, October 2017, October 2018</p>
 
 <h2>INTERNSHIP EXPERIENCE</h2>
-<p><b>Ohio Department of Transportation, Columbus, OH – software engineering intern</b>
-<p>January 2017 – April 2017
-<p><b>Build in Motion, Pittsburgh, PA – software engineering intern</b>
-<p>May 2017 – September 2018
+<p><b>Ohio Department of Transportation, Columbus, OH – software engineering intern</b></p>
+<p>January 2017 – April 2017</p>
+<p><b>Build in Motion, Pittsburgh, PA – software engineering intern</b></p>
+<p>May 2017 – September 2018</p>
+<p><b>Honda R&D Americas, Raymond, OH - software engineering intern</b></p>
+<p>Summer 2019</p>
 
 <h2>LINKS</h2>
 <p><a href="https://www.linkedin.com/in/nickolas-palmer-b17a9212b/">LinkedIn</a></p>
