--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-success mt-5 fixed-bottom">
+<nav class="navbar navbar-light bg-secondary mt-5 fixed-bottom">
   <div class="navbar-expand m-auto navbar-text">
     Last Updated 1/14/2019
   </div>
