--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-danger mb-5">
+<nav class="navbar navbar-light bg-primary mb-5">
   <a class="navbar-brand" href="/">Nick Palmer</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
