--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,8 +1,28 @@
 <app-layout>
-  <div class="topPadding">
-  <div class="jumbotron">
-    <h1 class="centered">Nick Palmer</h1>
-    <h2 class="centered">Computer Science & Engineering Student at Ohio State</h2>
+  <div class="container">
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="jumbotron text-center courier-new">
+        <div class="animated fadeIn">
+        <h1>Nick Palmer</h1>
+        <h2>Computer Science & Engineering Student at Ohio State</h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="jumbotron text-center courier-new">
+        <img src="../../images/my_picture.png">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col-lg-12">
+      <div class="jumbotron text-center courier-new animated fadeIn" style="font-size: 1.5em;">
+        <p>Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
+          For more information about me, please click <a href="/about">here</a>.
+        </p>
+      </div>
+      </div>
   </div>
   </div>
 </app-layout>
