--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,9 +1,19 @@
 <app-layout>
-  <h1 class="centered">About Me</h1>
+  <h1 class="text-center">About Me</h1>
   <div class="jumbotron">
-    <p>Hi there! My name is Nick Palmer and I am a third-year Computer Science & Engineering student at The Ohio State University.</p>
-    <p>My professional interests are related to web development, quality assurance, and computer science in general.</p>
-    <p>To see my skill set and internship experience, please click <a href="/resume">here</a>.</p>
-    <p>To see my contact info, please click <a href="/contact">here</a>.</p>
+    <div class="animated fadeIn">
+      <p>Hi there! My name is Nick Palmer and I am a third-year Computer Science & Engineering student at The Ohio State University.</p>
+      <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
+        Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
+        free to take a look at my project page to see some of my previous work.
+      </p>
+
+      <p>My expected graduation date is May of 2020. From there, I hope to join the industry right away to work on building
+        quality software. This upcoming summer, I will be working at Honda R&D Americas in Raymond, Ohio as a Software Engineering
+        Intern.</p>
+
+      <p>My main focuses in the past have been related to web development and quality assurance.
+        I hope to branch out into more areas, however, and I am always looking into opportunities to do so.</p>
+    </div>
   </div>
 </app-layout>
