add projects page

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -5,6 +5,7 @@
       <a routerLink="/home" class="nav-item nav-link">Home</a>
       <a routerLink="/about" class="nav-item nav-link">About Me</a>
       <a routerLink="/resume" class="nav-item nav-link">Resume</a>
+      <a routerLink="/projects" class="nav-item nav-link">Projects</a>
       <a routerLink="/contact" class="nav-item nav-link">Contact</a>
     </div>
   </div>
