--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -6,10 +6,19 @@
       <a routerLink="/about" class="nav-item nav-link">About Me</a>
       <a routerLink="/resume" class="nav-item nav-link">Resume</a>
       <a routerLink="/projects" class="nav-item nav-link">Projects</a>
-      <a routerLink="/contact" class="nav-item nav-link">Contact</a>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="https://www.linkedin.com/in/nickolas-palmer-b17a9212b/">
+        <i class="fa fa-linkedin"></i>
+      </a>
+    </div>
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="mailto:palmer.743@osu.edu">
+        <i class="fa fa-envelope"></i>
+      </a>
+    </div>
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="https://github.com/palmernickolas">
         <i class="fa fa-github"></i>
