various changes mainly pertaining to project page

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -2,18 +2,19 @@
   <h1 class="text-center">About Me</h1>
   <div class="jumbotron">
     <div class="animated fadeIn">
-      <p>Hi there! My name is Nick Palmer and I am a third-year Computer Science & Engineering student at The Ohio State University.</p>
+      <p>My name is Nick Palmer and I am a third-year Computer Science & Engineering student at The Ohio State University.</p>
       <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
         Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
         free to take a look at my project page to see some of my previous work.
       </p>
 
-      <p>My expected graduation date is May of 2020. From there, I hope to join the industry right away to work on building
-        quality software. This upcoming summer, I will be working at Honda R&D Americas in Raymond, Ohio as a Software Engineering
-        Intern.</p>
+      <p>The main focuses I have had in the past have been related to web development and quality assurance. I hope to branch
+        out into more areas, however, and I am always looking into opportunities to do so.</p>
 
-      <p>My main focuses in the past have been related to web development and quality assurance.
-        I hope to branch out into more areas, however, and I am always looking into opportunities to do so.</p>
+      <p>This upcoming summer, I will be working at Honda R&D Americas in Raymond, Ohio as a Software Engineering Intern. My
+        expected graduation date is May of 2020. From there, I hope to join the industry right away to work on building quality
+        software. </p>
+
     </div>
   </div>
 </app-layout>
