--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -8,20 +8,20 @@
       <a routerLink="/projects" class="nav-item nav-link">Projects</a>
     </div>
   </div>
-  <div class="navbar-expand ml-auto navbar-nav">
+  <div class="navbar-expand ml-auto navbar-nav float-left">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="https://www.linkedin.com/in/nickolas-palmer-b17a9212b/">
-        <i class="fa fa-linkedin"></i>
+        <i class="fa fa-lg fa-linkedin"></i>
       </a>
     </div>
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="mailto:palmer.743@osu.edu">
-        <i class="fa fa-envelope"></i>
+        <i class="fa fa-lg fa-envelope"></i>
       </a>
     </div>
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="https://github.com/palmernickolas">
-        <i class="fa fa-github"></i>
+        <i class="fa fa-lg fa-github"></i>
       </a>
     </div>
   </div>
