--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -1,3 +1,55 @@
 <app-layout>
-  testing
+  <div class="row">
+    <div class="card col-lg-6">
+      <img class="card-img-top" src="assets/img/ODOT2.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">ODOT Snow & Ice Traffic Report Site</h5>
+          <p class="card-text">January 2017 - March 2017</p>
+          <p class="card-text">This project involved improving the design of the Snow & Ice Traffic Reports site at the Ohio Department of Transportation.
+            To complete this project I used JavaScript, jQuery, HTML, and CSS.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="card col-lg-6">
+      <img class="card-img-top" src="assets/img/protractor.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">Automated Testing Using Protractor</h5>
+          <p class="card-text">May 2017 - September 2018</p>
+          <p class="card-text">Wrote end-to-end Angular tests that ran against Build In Motion's e-commerce platform.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row" style="margin-bottom: 100px;">
+    <div class="card col-lg-6">
+      <img class="card-img-top" src="assets/img/TLC.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">Automated Testing Using Protractor</h5>
+          <p class="card-text">May 2017 - Present</p>
+          <p class="card-text">Wrote tests that check new builds of The Laundry Chute's various applications.</p>
+          <div class="text-center">
+            <a href="https://www.thelaundrychute.com/" class="btn btn-primary">TLC website</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card col-lg-6">
+      <img class="card-img-top" src="assets/img/clarkdeco.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">Various Front-End Developments</h5>
+          <p class="card-text">October 2018 - Present</p>
+          <p class="card-text">Implement front-end designs for The Dev Shop's clients. I utilize HTML, CSS, and TypeScript on these projects.
+          </p>
+          <div class="text-center">
+            <a href="https://www.clarkdeco.com/" class="btn btn-primary">Clark Deco's' website</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </app-layout>
