--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="container">
   <div class="row">
     <div class="col-lg-6">
-      <div class="jumbotron text-center courier-new">
+      <div class="jumbotron row-height text-center courier-new">
         <div class="animated fadeIn">
         <h1>Nick Palmer</h1>
         <h2>Computer Science & Engineering Student at Ohio State</h2>
@@ -10,15 +10,15 @@
       </div>
     </div>
     <div class="col-lg-6">
-      <div class="jumbotron text-center courier-new">
-        <img src="../../images/my_picture.png">
+      <div class="jumbotron row-height text-center courier-new">
+        <img src="assets/img/my_picture.png"/>
       </div>
     </div>
   </div>
   <div class="row">
       <div class="col-lg-12">
-      <div class="jumbotron text-center courier-new animated fadeIn" style="font-size: 1.5em;">
-        <p>Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
+      <div class="jumbotron text-center courier-new" style="font-size: 1.5em;">
+        <p class="animated fadeIn">Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
           For more information about me, please click <a href="/about">here</a>.
         </p>
       </div>
