new protractor image

--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -41,7 +41,7 @@
       <img class="card-img-top" src="assets/img/clarkdeco.png">
       <div class="card-body">
         <div class="animated fadeIn">
-          <h5 class="card-title">Various Front-End Developments</h5>
+          <h5 class="card-title">Various Front-End Development</h5>
           <p class="card-text">October 2018 - Present</p>
           <p class="card-text">Implement front-end designs for The Dev Shop's clients. I utilize HTML, CSS, and TypeScript on these projects.
           </p>
