--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,7 +1,7 @@
 <app-layout>
   <div class="container">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-7">
       <div class="jumbotron row-height text-center courier-new">
         <div class="animated fadeIn">
         <h1>Nick Palmer</h1>
@@ -9,10 +9,8 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6">
-      <div class="jumbotron row-height text-center courier-new">
-        <img src="assets/img/my_picture.png"/>
-      </div>
+    <div class="col-lg-5">
+        <img class="row-height text-center float-right" src="assets/img/osu.png"/>
     </div>
   </div>
   <div class="row">
