--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,11 +1,11 @@
 <app-layout>
-  <h1 class="text-center">About Me</h1>
+  <h1 class="text-center text-white">About Me</h1>
   <div class="jumbotron">
     <div class="animated fadeIn">
       <p>My name is Nick Palmer and I am a third-year Computer Science & Engineering student at The Ohio State University.</p>
       <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
         Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
-        free to take a look at my project page to see some of my previous work.
+        free to take a look at my <a routerLink="/projects">project page</a> to see some of my previous work.
       </p>
 
       <p>The main focuses I have had in the past have been related to web development and quality assurance. I hope to branch
