--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -9,15 +9,15 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-5">
-        <img class="row-height text-center float-right" src="assets/img/osu.png"/>
+    <div class="col-lg-5  text-center card remove-border div-margin row-height">
+        <img class="row-height" src="assets/img/osu.png"/>
     </div>
   </div>
   <div class="row">
       <div class="col-lg-12">
       <div class="jumbotron text-center courier-new" style="font-size: 1.5em;">
         <p class="animated fadeIn">Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
-          For more information about me, please click <a href="/about">here</a>.
+          For more information about me, please click <a routerLink="/about">here</a>.
         </p>
       </div>
       </div>
