--- a/src/app/ui/layout/layout.component.html
+++ b/src/app/ui/layout/layout.component.html
@@ -1,6 +1,8 @@
+<div style="min-height: 87.5%;">
 <app-header></app-header>
 <div class="container">
   <ng-content></ng-content>
+</div>
 </div>
 <app-footer></app-footer>
 
