--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -1,6 +1,7 @@
 <app-layout>
+  <h1 class="text-center text-white">Projects</h1>
   <div class="row">
-    <div class="card col-lg-6">
+    <div class="card bg-primary col-lg-4">
       <img class="card-img-top" src="assets/img/ODOT2.png">
       <div class="card-body">
         <div class="animated fadeIn">
@@ -12,7 +13,7 @@
         </div>
       </div>
     </div>
-    <div class="card col-lg-6">
+    <div class="card bg-success col-lg-4">
       <img class="card-img-top" src="assets/img/protractor.png">
       <div class="card-body">
         <div class="animated fadeIn">
@@ -22,9 +23,7 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row" style="margin-bottom: 100px;">
-    <div class="card col-lg-6">
+    <div class="card bg-primary col-lg-4">
       <img class="card-img-top" src="assets/img/TLC.png">
       <div class="card-body">
         <div class="animated fadeIn">
@@ -32,21 +31,53 @@
           <p class="card-text">May 2017 - Present</p>
           <p class="card-text">Wrote tests that check new builds of The Laundry Chute's various applications.</p>
           <div class="text-center">
-            <a href="https://www.thelaundrychute.com/" class="btn btn-primary">TLC website</a>
+            <a href="https://www.thelaundrychute.com/" class="btn btn-success">TLC website</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="card col-lg-6">
+  </div>
+  <div class="row" style="margin-bottom: 100px;">
+    <div class="card bg-success col-lg-4">
+      <img class="card-img-top" src="assets/img/scoobi.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">Manual Testing</h5>
+          <p class="card-text">May 2018 - August 2018</p>
+          <p class="card-text">Involved creating test cases to find any bugs within the application's various processes
+            and reporting my findings back to the  team's developers.
+          </p>
+          <div class="text-center">
+            <a href="https://www.scoobi.co/" class="btn btn-primary">Scoobi's website</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card bg-primary col-lg-4">
       <img class="card-img-top" src="assets/img/clarkdeco.png">
       <div class="card-body">
         <div class="animated fadeIn">
           <h5 class="card-title">Various Front-End Development</h5>
           <p class="card-text">October 2018 - Present</p>
-          <p class="card-text">Implement front-end designs for The Dev Shop's clients. I utilize HTML, CSS, and TypeScript on these projects.
+          <p class="card-text">I do various front-end work for The Dev Shop's clients. I utilize HTML, CSS, and TypeScript on these Angular-based projects.
           </p>
           <div class="text-center">
-            <a href="https://www.clarkdeco.com/" class="btn btn-primary">Clark Deco's' website</a>
+            <a href="https://www.clarkdeco.com/" class="btn btn-success">Clark Deco's website</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card bg-success col-lg-4">
+      <img class="card-img-top" src="assets/img/mario1.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">Super Mario Bros Recreation in C#</h5>
+          <p class="card-text">January 2019 - Present</p>
+          <p class="card-text">Using C#, Visual Studio, and Monogame my group is recreating the original Super Mario Bros game during the Spring
+            2019 semester.
+          </p>
+          <div class="text-center">
+            <a href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-primary">Course Website</a>
           </div>
         </div>
       </div>
