--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-secondary mt-5 fixed-bottom">
+<nav class="navbar navbar-light bg-primary mt-5">
   <div class="navbar-expand m-auto navbar-text">
-    Last Updated 3/30/2019
+    Last Updated 3/31/2019
   </div>
 </nav>
