--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -1,7 +1,7 @@
 <app-layout>
-  <h1 class="centered">Resume</h1>
+  <h1 class="text-center text-white">Resume</h1>
   <div class="jumbotron">
-    <div>
+      <a href="assets/files/Resume_Nickolas_Palmer.pdf" download>Click to download resume PDF.</a>
       <h3>EDUCATION</h3>
       <div class="animated fadeIn">
         <p><b>The Ohio State University (Columbus, OH)</b></p>
@@ -42,6 +42,5 @@
         <p>Ohio State Hackathon (Hack OHI/O) participant</p>
         <p>November 2016, October 2017, October 2018</p>
       </div>
-    </div>
   </div>
 </app-layout>
