--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-primary mb-5">
-  <a class="navbar-brand" href="/">Nick Palmer</a>
+  <a class="navbar-brand" routerLink="/home">Nick Palmer</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a routerLink="/home" class="nav-item nav-link">Home</a>
@@ -8,7 +8,7 @@
       <a routerLink="/projects" class="nav-item nav-link">Projects</a>
     </div>
   </div>
-  <div class="navbar-expand ml-auto navbar-nav float-left">
+  <div class="navbar-expand navbar-nav">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="https://www.linkedin.com/in/nickolas-palmer-b17a9212b/">
         <i class="fa fa-lg fa-linkedin"></i>
