--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -1,7 +1,11 @@
 <app-layout>
   <h1 class="text-center text-white">Resume</h1>
   <div class="jumbotron">
-      <a href="assets/files/Resume_Nickolas_Palmer.pdf" download>Click to download resume PDF.</a>
+      <h3>Nickolas Palmer</h3>
+      <div class="animated fadeIn">
+        <p>Email: palmer.743@osu.edu</p>
+        <p><a href="assets/files/Resume_Nickolas_Palmer.pdf" download>Click here to download resume.</a></p>
+      </div>
       <h3>EDUCATION</h3>
       <div class="animated fadeIn">
         <p><b>The Ohio State University (Columbus, OH)</b></p>
