--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,27 +1,25 @@
 <app-layout>
   <div class="container">
-  <div class="row">
-    <div class="col-lg-7">
-      <div class="jumbotron row-height text-center courier-new">
-        <div class="animated fadeIn">
-        <h1>Nick Palmer</h1>
-        <h2>Computer Science & Engineering Student at Ohio State</h2>
+    <div class="row">
+      <div class="col-lg-7">
+        <div class="jumbotron row-height text-center courier-new">
+          <div class="animated fadeIn">
+            <h1>Nick Palmer</h1>
+            <h2>Computer Science & Engineering Student at Ohio State</h2>
+          </div>
+        </div>
+      </div>
+      <img class="col-lg-5  text-center div-margin row-height" src="assets/img/osu.png" />
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="jumbotron text-center courier-new" style="font-size: 1.5em;">
+          <p class="animated fadeIn">Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
+            For more information about me, please click <a routerLink="/about">here</a>.
+          </p>
         </div>
       </div>
     </div>
-    <div class="col-lg-5  text-center card remove-border div-margin row-height">
-        <img class="row-height" src="assets/img/osu.png"/>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col-lg-12">
-      <div class="jumbotron text-center courier-new" style="font-size: 1.5em;">
-        <p class="animated fadeIn">Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
-          For more information about me, please click <a routerLink="/about">here</a>.
-        </p>
-      </div>
-      </div>
-  </div>
   </div>
 </app-layout>
 <router-outlet></router-outlet>
