auto scroll on route change and remove email on mobile devices

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -15,7 +15,7 @@
       </a>
     </div>
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="mailto:palmer.743@osu.edu">
+      <a class="nav-item nav-link d-none d-lg-block" href="mailto:palmer.743@osu.edu">
         <i class="fa fa-lg fa-envelope"></i>
       </a>
     </div>
