about/home changes

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -2,18 +2,21 @@
   <h1 class="text-center text-white">About Me</h1>
   <div class="jumbotron">
     <div class="animated fadeIn">
-      <p>My name is Nick Palmer and I am a third-year Computer Science & Engineering student at The Ohio State University.</p>
+      <p>My name is Nick Palmer and I am a Computer Science & Engineering student at The Ohio State University.</p>
       <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
         Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
         free to take a look at my <a routerLink="/projects">project page</a> to see some of my previous work.
       </p>
 
-      <p>The main focuses I have had in the past have been related to web development and quality assurance. I hope to branch
-        out into more areas, however, and I am always looking into opportunities to do so.</p>
+      <p>I have experienced working with various programming languages and frameworks throughout my internship experiences. 
+        Through both these internships as well as my academic pursuits, I feel that I have become a much better developer since 
+        starting this journey. 
+      </p>
 
-      <p>This upcoming summer, I will be working at Honda R&D Americas in Raymond, Ohio as a Software Engineering Intern. My
-        expected graduation date is May of 2020. From there, I hope to join the industry right away to work on building quality
-        software. </p>
+      <p>
+        I will be graduating in May of 2020, and afterwards I hope to start right away with my full-time career in this industry. Please
+        feel free to reach out if you know of any potential openings or would like to discuss my qualifications further.
+      </p>
 
     </div>
   </div>
