--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="jumbotron text-center courier-new" style="font-size: 1.5em;">
-          <p class="animated fadeIn">Hi there! Welcome to my site. I am currently a junior at Ohio State with a major in Computer Science & Engineering.
+          <p class="animated fadeIn">Hi there! Welcome to my site. I am a senior at Ohio State majoring in Computer Science & Engineering.
             For more information about me, please click <a routerLink="/about">here</a>.
           </p>
         </div>
