--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -1,48 +1,11 @@
 <app-layout>
   <h1 class="text-center text-white">Projects</h1>
-  <div class="row">
-    <div class="card bg-primary col-lg-4">
-      <img class="card-img-top" src="assets/img/ODOT2.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">ODOT Snow & Ice Traffic Report Site</h5>
-          <p class="card-text">January 2017 - March 2017</p>
-          <p class="card-text">This project involved improving the design of the Snow & Ice Traffic Reports site at the Ohio Department of Transportation.
-            To complete this project I used JavaScript, jQuery, HTML, and CSS.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="card bg-success col-lg-4">
-      <img class="card-img-top" src="assets/img/protractor.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">Automated Testing Using Protractor</h5>
-          <p class="card-text">May 2017 - September 2018</p>
-          <p class="card-text">Wrote end-to-end Angular tests that ran against Build In Motion's e-commerce platform.</p>
-        </div>
-      </div>
-    </div>
-    <div class="card bg-primary col-lg-4">
-      <img class="card-img-top" src="assets/img/TLC.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">Automated Testing Using Protractor</h5>
-          <p class="card-text">May 2017 - Present</p>
-          <p class="card-text">Wrote tests that check new builds of The Laundry Chute's various applications.</p>
-          <div class="text-center">
-            <a href="https://www.thelaundrychute.com/" class="btn btn-success">TLC website</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="row" style="margin-bottom: 100px;">
     <div class="card bg-success col-lg-4">
       <img class="card-img-top" src="assets/img/scoobi.png">
       <div class="card-body">
         <div class="animated fadeIn">
-          <h5 class="card-title">Manual Testing</h5>
+          <h5 class="card-title">Website</h5>
           <p class="card-text">May 2018 - August 2018</p>
           <p class="card-text">Involved creating test cases to find any bugs within the application's various processes
             and reporting my findings back to the  team's developers.
@@ -57,7 +20,7 @@
       <img class="card-img-top" src="assets/img/clarkdeco.png">
       <div class="card-body">
         <div class="animated fadeIn">
-          <h5 class="card-title">Various Front-End Development</h5>
+          <h5 class="card-title">stats project</h5>
           <p class="card-text">October 2018 - Present</p>
           <p class="card-text">I do various front-end work for The Dev Shop's clients. I utilize HTML, CSS, and TypeScript on these Angular-based projects.
           </p>
