--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -1,50 +1,57 @@
 <app-layout>
   <h1 class="text-center text-white">Resume</h1>
   <div class="jumbotron">
-      <h3>Nickolas Palmer</h3>
-      <div class="animated fadeIn">
-        <p>Email: palmer.743@osu.edu</p>
-        <p><a href="assets/files/Resume_Nickolas_Palmer.pdf" download>Click here to download resume.</a></p>
-      </div>
-      <h3>EDUCATION</h3>
-      <div class="animated fadeIn">
-        <p><b>The Ohio State University (Columbus, OH)</b></p>
-        <p>Bachelor of Science in Computer Science & Engineering</p>
-        <p>August 2016 - May 2020</p>
-      </div>
+    <h3>Nickolas Palmer</h3>
+    <div class="animated fadeIn">
+      <p>Email: palmer.743@osu.edu</p>
+      <p><a href="assets/files/Resume_Nickolas_Palmer.pdf" download>Click here to download resume.</a></p>
+    </div>
+    <h3>Education</h3>
+    <div class="animated fadeIn">
+      <p><b>The Ohio State University (Columbus, OH)</b></p>
+      <p>Bachelor of Science in Computer Science & Engineering</p>
+      <p>August 2016 - May 2020</p>
+    </div>
 
-      <h3>LANGUAGES</h3>
-      <div class="animated fadeIn">
-        <p>Beginner: C</p>
-        <p>Intermediate: Java, C#, TypeScript, HTML5/CSS</p>
-      </div>
+    <h3>Coding Experience</h3>
+    <div class="animated fadeIn">
+      <p>Java, C#, TypeScript, JavaScript, HTML, CSS, GoLang, SQL</p>
+    </div>
 
-      <h3>TECHNOLOGIES/FRAMEWORKS</h3>
-      <div class="animated fadeIn">
-        <p>Angular, Node.js, .NET, jQuery, Protractor</p>
-      </div>
+    <h3>Frameworks</h3>
+    <div class="animated fadeIn">
+      <p>Angular, React Native, Protractor, Bootstrap, .NET</p>
+    </div>
 
-      <h3>PROJECT MANAGEMENT</h3>
-      <div class="animated fadeIn">
-        <p>Git, Agile/Scrum methodologies, JIRA, Azure DevOps</p>
-      </div>
+    <h3>Environments</h3>
+    <div class="animated fadeIn">
+      <p>Windows, MacOS, Linux, Node.js, Expo CLI, Git, SVN</p>
+    </div>
 
-      <h3>INTERNSHIP EXPERIENCE</h3>
-      <div class="animated fadeIn">
-        <p><b>Ohio Department of Transportation, Columbus, OH – software engineering intern</b></p>
-        <p>January 2017 – April 2017</p>
-        <p><b>Build in Motion, Pittsburgh, PA – software engineering intern</b></p>
-        <p>May 2017 – September 2018</p>
-        <p><b>The Dev Shop, Pittsburgh, PA – software engineering intern</b></p>
-        <p>September 2018 – Present</p>
-        <p><b>Honda R&D Americas, Raymond, OH - software engineering intern</b></p>
-        <p>Summer 2019</p>
-      </div>
+    <h3>Internship Experience</h3>
+    <div class="animated fadeIn">
+      <p><b>Ohio Department of Transportation, Columbus, OH – Traffic Operations Intern</b></p>
+      <p>January 2017 – April 2017</p>
+      <p>Used HTML, CSS, and JavaScript/jQuery to update ODOT’s Snow & Ice Traffic Report interface.</p>
+      <p><b>Build in Motion, Pittsburgh, PA – software engineering intern</b></p>
+      <p>May 2017 – September 2018</p>
+      <p>Wrote automated tests to test against company’s e-commerce platform builds – reduced manual testing of 16 hours to
+        automated script.</p>
+      <p><b>Honda R&D Americas, Raymond, OH - software engineering intern</b></p>
+      <p>May 2019 - August 2019</p>
+      <p>Lead software developer on student team with goal of building minimally viable product. Used React Native and GoLang
+        to develop front-end and back-end aspects of application.</p>
+      <p><b>The Dev Shop, Pittsburgh, PA – software engineering intern</b></p>
+      <p>September 2018 – Present</p>
 
-      <h3>ACTIVITIES</h3>
-      <div class="animated fadeIn">
-        <p>Ohio State Hackathon (Hack OHI/O) participant</p>
-        <p>November 2016, October 2017, October 2018</p>
-      </div>
+      <p>Part-time position: responsibilities include overseeing automated tests for various client projects as well as working
+        on Angular applications in a primarily front-end role.</p>
+    </div>
+
+    <h3>ACTIVITIES</h3>
+    <div class="animated fadeIn">
+      <p>Ohio State Hackathon (Hack OHI/O) participant</p>
+      <p>November 2016, October 2017, October 2018</p>
+    </div>
   </div>
 </app-layout>
