--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,15 +1,15 @@
 <app-layout>
   <div class="container">
     <div class="row">
-      <div class="col-lg-7">
+      <div class="col-lg-9">
         <div class="jumbotron row-height text-center courier-new">
           <div class="animated fadeIn">
-            <h1>Nick Palmer</h1>
+            <h1>Nick Palmer FIX MY STYLING</h1>
             <h2>Computer Science & Engineering Student at Ohio State</h2>
           </div>
         </div>
       </div>
-      <img class="col-lg-5  text-center div-margin row-height" src="assets/img/osu.png" />
+      <img class="col-lg-3 max-img-height text-center div-margin row-height" src="assets/img/my_picture.png" />
     </div>
     <div class="row">
       <div class="col-lg-12">
