--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -2,19 +2,16 @@
   <h1 class="text-center text-white">About Me</h1>
   <div class="jumbotron">
     <div class="animated fadeIn">
-      <p>My name is Nick Palmer and I am a Computer Science & Engineering student at The Ohio State University.</p>
+      <p>Hi! My name is Nick Palmer. I am a fourth-year Computer Science & Engineering student at Ohio State and will be graduating
+        in May of 2020. After graduation, I plan to relocate to the Chicagoland area.
+      </p>
       <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
         Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
-        free to take a look at my <a routerLink="/projects">project page</a> to see some of my previous work.
-      </p>
-
-      <p>I have experienced working with various programming languages and frameworks throughout my internship experiences. 
-        Through both these internships as well as my academic pursuits, I feel that I have become a much better developer since 
-        starting this journey. 
+        free to take a look at my <a routerLink="/resume">resume page</a> to see some of my previous academic and internship experiences.
       </p>
 
       <p>
-        I will be graduating in May of 2020, and afterwards I hope to start right away with my full-time career in this industry. Please
+        While most of my experiences are related to web development, I am very open to any other areas of software development. Please
         feel free to reach out if you know of any potential openings or would like to discuss my qualifications further.
       </p>
 
