--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-9">
-        <div class="jumbotron row-height text-center courier-new">
+        <div class="jumbotron row-height text-center courier-new d-flex align-items-center">
           <div class="animated fadeIn">
-            <h1>Nick Palmer FIX MY STYLING</h1>
+            <h1>Nick Palmer</h1>
             <h2>Computer Science & Engineering Student at Ohio State</h2>
           </div>
         </div>
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <div class="jumbotron text-center courier-new" style="font-size: 1.5em;">
+        <div class="jumbotron text-center courier-new d-flex align-items-center" style="font-size: 1.5em;">
           <p class="animated fadeIn">Hi there! Welcome to my site. I am a senior at Ohio State majoring in Computer Science & Engineering.
             For more information about me, please click <a routerLink="/about">here</a>.
           </p>
