--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -1,47 +1,43 @@
 <app-layout>
-  <h1 class="text-center text-white">Projects</h1>
+  <h1 class="text-center text-white">Personal/School Projects</h1>
   <div class="row" style="margin-bottom: 100px;">
     <div class="card bg-success col-lg-4">
-      <img class="card-img-top" src="assets/img/scoobi.png">
+      <img class="card-img-top" src="assets/img/personal_site.png">
       <div class="card-body">
         <div class="animated fadeIn">
-          <h5 class="card-title">Website</h5>
-          <p class="card-text">May 2018 - August 2018</p>
-          <p class="card-text">Involved creating test cases to find any bugs within the application's various processes
-            and reporting my findings back to the  team's developers.
+          <h5 class="card-title">My Website</h5>
+          <p class="card-text">Created January 2019</p>
+          <p class="card-text">Created this website to serve as a way of demonstrating my past software development experiences.
+            Built in Angular with Bootstrap and TypeScript.
           </p>
-          <div class="text-center">
-            <a href="https://www.scoobi.co/" class="btn btn-primary">Scoobi's website</a>
-          </div>
         </div>
       </div>
     </div>
     <div class="card bg-primary col-lg-4">
-      <img class="card-img-top" src="assets/img/clarkdeco.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">stats project</h5>
-          <p class="card-text">October 2018 - Present</p>
-          <p class="card-text">I do various front-end work for The Dev Shop's clients. I utilize HTML, CSS, and TypeScript on these Angular-based projects.
-          </p>
-          <div class="text-center">
-            <a href="https://www.clarkdeco.com/" class="btn btn-success">Clark Deco's website</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card bg-success col-lg-4">
       <img class="card-img-top" src="assets/img/mario1.png">
       <div class="card-body">
         <div class="animated fadeIn">
           <h5 class="card-title">Super Mario Bros Recreation in C#</h5>
-          <p class="card-text">January 2019 - Present</p>
-          <p class="card-text">Using C#, Visual Studio, and Monogame my group is recreating the original Super Mario Bros game during the Spring
+          <p class="card-text">January 2019 - April 2019</p>
+          <p class="card-text">Using C#, Visual Studio, and Monogame my group recreated multiple levels of the original Super Mario Bros game during the Spring
             2019 semester.
           </p>
           <div class="text-center">
-            <a href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-primary">Course Website</a>
+            <a href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-success">Course Website</a>
           </div>
+        </div>
+      </div>
+    </div>
+     <div class="card bg-success col-lg-4">
+      <img class="card-img-top" src="assets/img/fpd_stats.png">
+      <div class="card-body">
+        <div class="animated fadeIn">
+          <h5 class="card-title">FPD Stats</h5>
+          <p class="card-text">Summer 2019</p>
+          <p class="card-text">FPD Stats is a very early-stage statistics tracking project. Over the next few months, a friend and I will
+            be building out an application that shows shots on goal and other statistics on a hockey rink. A UI for 
+            the game statistics recorder will be built to allow drag and drop actions that replicate on the end-user's screen.
+          </p>
         </div>
       </div>
     </div>
