--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -11,7 +11,7 @@
       </p>
 
       <p>
-        While most of my experiences are related to web development, I am very open to any other areas of software development. Please
+        While many of my experiences are related to web development, I am very open to any other areas of software development. Please
         feel free to reach out if you know of any potential openings or would like to discuss my qualifications further.
       </p>
 
