--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -28,24 +28,33 @@
       <p>Windows, MacOS, Linux, Node.js, Expo CLI, Git, SVN</p>
     </div>
 
-    <h3>Internship Experience</h3>
+    <h3>Technical Experience</h3>
     <div class="animated fadeIn">
+      <p><b>The Dev Shop, Verona, PA – Part-Time Software Engineering Intern</b></p>
+      <p>September 2018 – Present</p>
+      <ul>
+        <li>Manage automated test builds that run against various client projects</li>
+        <li>Developer of Angular 8 applications in a primarily front-end role</li>
+      </ul>
+      <p><b>Honda R&D Americas, Raymond, OH - Information Systems Intern</b></p>
+      <p>May 2019 - August 2019</p>
+      <ul>
+        <li>Lead software developer on student team tasked with building minimally viable product</li>
+        <li>Developed front-end of application with React Native, back-end with GoLang</li>
+      </ul>
+      <p><b>Build in Motion, Aspinwall, PA – Software Engineering Intern</b></p>
+      <p>May 2017 – September 2018</p>
+      <ul>
+        <li>Developed automated tests against company’s e-commerce platform – consolidated 16 hours of manual testing into 15-minute
+          script</li>
+        <li>Front-end developer on client projects using Angular, TypeScript, HTML, and CSS</li>
+      </ul>
       <p><b>Ohio Department of Transportation, Columbus, OH – Traffic Operations Intern</b></p>
       <p>January 2017 – April 2017</p>
-      <p>Used HTML, CSS, and JavaScript/jQuery to update ODOT’s Snow & Ice Traffic Report interface.</p>
-      <p><b>Build in Motion, Pittsburgh, PA – software engineering intern</b></p>
-      <p>May 2017 – September 2018</p>
-      <p>Wrote automated tests to test against company’s e-commerce platform builds – reduced manual testing of 16 hours to
-        automated script.</p>
-      <p><b>Honda R&D Americas, Raymond, OH - software engineering intern</b></p>
-      <p>May 2019 - August 2019</p>
-      <p>Lead software developer on student team with goal of building minimally viable product. Used React Native and GoLang
-        to develop front-end and back-end aspects of application.</p>
-      <p><b>The Dev Shop, Pittsburgh, PA – software engineering intern</b></p>
-      <p>September 2018 – Present</p>
-
-      <p>Part-time position: responsibilities include overseeing automated tests for various client projects as well as working
-        on Angular applications in a primarily front-end role.</p>
+      <ul>
+        <li>Updated ODOT’s Snow & Ice Traffic Report site used internally</li>
+        <li>Used HTML, CSS, and JavaScript/jQuery</li>
+      </ul>
     </div>
 
     <h3>ACTIVITIES</h3>
