--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -39,7 +39,7 @@
       <p><b>Honda R&D Americas, Raymond, OH - Information Systems Intern</b></p>
       <p>May 2019 - August 2019</p>
       <ul>
-        <li>Lead software developer on student team tasked with building minimally viable product</li>
+        <li>Lead software developer on student team tasked with building minimum viable product</li>
         <li>Developed front-end of application with React Native, back-end with GoLang</li>
       </ul>
       <p><b>Build in Motion, Aspinwall, PA – Software Engineering Intern</b></p>
